# movielite

./: .gitignore  CHANGELOG.md  README.md  TODO.md  pyproject.toml  test_imports.py
.github/workflows/: ci.yml
benchmarks/: README.md  compare_moviepy.py  compare_moviepy_v1.py
benchmarks/output/: benchmark_results.json
docs/: advanced.md  api.md
docs/icon/: movielite_gif.py
examples/: basic_editing.py  basic_usage.py  composite_clips.py  effects_showcase.py  masking_effects.py  rotation_examples.py  speed_examples.py  text_animations.py  transitions.py  video_audio_control.py
src/movielite/: __init__.py  bootstrap.py
src/movielite/afx/: __init__.py  base.py  fade.py
src/movielite/audio/: __init__.py  audio_clip.py
src/movielite/composite/: composite_clip.py
src/movielite/core/: __init__.py  alpha_video_clip.py  audio_clip.py  clip.py  composite_clip.py  concatenate.py  empty_frame.py  graphic_clip.py  image_clip.py  logger.py  media_clip.py  processed_video_clip.py  text_clip.py  utils.py  video_clip.py  video_composition.py  video_writer.py
src/movielite/fx/: __init__.py  audio_fx.py  video_fx.py
src/movielite/image/: __init__.py
src/movielite/vfx/: __init__.py  base.py  blur.py  color.py  fade.py  glitch.py  vignette.py  zoom.py
src/movielite/video/: __init__.py  alpha_video_clip.py  video_clip.py
src/movielite/vtx/: __init__.py  base.py  blur_dissolve.py  crossfade.py  dissolve.py
tests/: __init__.py  test_basic_functionality.py  test_imports.py
